# kydeps

./: .gitignore  .gitmodules  CMakeLists.txt  KyDeps.cmake  KyDepsBoot.cmake  README.md  build.cmake  config.cmake  fingerprints.cmake  kydeps.cmake  watchman.cmake.disabled
cmake/: KyDepsCommon.cmake  KyDepsGenerateInstall.cmake  KyDepsTools.cmake
cmake/templates/: package_definition.cmake.in  package_redirect.cmake.in
definitions/: boost.cmake  fmt.cmake  folly.cmake  httplib.cmake  libevent.cmake  libssh.cmake  llvm.cmake  nginx.cmake  openssl.cmake  sqlite3.cmake  sqlite_orm.cmake  xxHash.cmake  zlib.cmake  zstd.cmake
definitions/google/: double-conversion.cmake  flags.cmake  log.cmake  protobuf.cmake  test.cmake
deps.manifest/: GTest.manifest  OpenSSL.manifest  fingerprints.cmake  fmt.manifest  gflags.manifest  glog.manifest  httplib.manifest  protobuf.manifest  xxHash.manifest  zlib.manifest  zstd.manifest
deps.manifest/Debug/Darwin/: GTest.manifest  OpenSSL.manifest  fmt.manifest  gflags.manifest  glog.manifest  httplib.manifest  protobuf.manifest  xxHash.manifest  zlib.manifest  zstd.manifest
deps.manifest/Debug/Linux/: GTest.manifest  OpenSSL.manifest  fmt.manifest  gflags.manifest  glog.manifest  httplib.manifest  protobuf.manifest  xxHash.manifest  zlib.manifest  zstd.manifest
deps.manifest/Debug/Windows/: GTest.manifest  OpenSSL.manifest  fmt.manifest  gflags.manifest  glog.manifest  httplib.manifest  protobuf.manifest  xxHash.manifest  zlib.manifest  zstd.manifest
deps.manifest/Release/Darwin/: GTest.manifest  OpenSSL.manifest  fmt.manifest  gflags.manifest  glog.manifest  httplib.manifest  protobuf.manifest  xxHash.manifest  zlib.manifest  zstd.manifest
deps.manifest/Release/Linux/: GTest.manifest  OpenSSL.manifest  fmt.manifest  gflags.manifest  glog.manifest  httplib.manifest  protobuf.manifest  xxHash.manifest  zlib.manifest  zstd.manifest
deps.manifest/Release/Windows/: GTest.manifest  OpenSSL.manifest  fmt.manifest  gflags.manifest  glog.manifest  httplib.manifest  protobuf.manifest  xxHash.manifest  zlib.manifest  zstd.manifest
install/: KyDeps.cmake  KyDepsPopulate.cmake  llvm.cmake  nginx.cmake
install/Windows/Debug/: GTest.cmake  OpenSSL.cmake  fmt.cmake  gflags.cmake  glog.cmake  httplib.cmake  nginx.cmake  perl.cmake  protobuf.cmake  xxHash.cmake  zlib.cmake  zstd.cmake
install/Windows/Release/: GTest.cmake  OpenSSL.cmake  fmt.cmake  gflags.cmake  glog.cmake  httplib.cmake  llvm.cmake  nginx.cmake  perl.cmake  protobuf.cmake  xxHash.cmake  zlib.cmake  zstd.cmake
tests/: CMakeLists.txt
tests/hello_boost/: CMakeLists.txt  main.cpp  run_test.cmake
tests/hello_world/: CMakeLists.txt  main.cpp
tests/nginx/: CMakeLists.txt
utils/: KyDepsEpilogue.cmake  KyDepsGenerateInstall.cmake  KyDepsInclude.cmake  KyDepsInstall.cmake  KyDepsOptions.cmake  KyDepsPackage.cmake  KyDepsPrologue.cmake  KyDepsTools.cmake
utils/templates/: package_definition.cmake.in  package_redirect.cmake.in
